--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.5.2
+autopep8==1.7.0
+colorama==0.4.5
+decorator==5.1.1
 Django==4.1
+django-extensions==3.2.1
 django-ninja==0.19.1
+ipython==8.8.0
 pydantic==1.10.2
 sqlparse==0.4.2
 typing_extensions==4.4.0
